<resources>
    <string name="app_name">SISMOS PERÚ</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fecha"><u>Fecha y hora local:</u></string>
    <string name="magnitud"><u>Magnitud:</u></string>
    <string name="referencia"><u>Referencia:</u></string>
    <string name="ubicacion"><u>Ubicación:</u></string>
    <string name="profundidad"><u>Profundidad:</u></string>
    <string name="intensidad"><u>Intensidad:</u></string>
</resources>