<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentGlosario">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/purple_700"
            android:gravity="center"
            android:text="Glosario de Términos"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/borde_glosario"
            android:padding="10dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Magnitudes:"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="3.5dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/green"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sismo con magnitud menor a 4.5"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="3.5dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/yellow"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sismo con magnitud entre a 4.5 y 6.0"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="3.5dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/red"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sismo con magnitud mayor a 6.0"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/borde_glosario"
            android:padding="10dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profundidades (km):"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="3.5dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/red"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Superficiales (0-60)"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="3.5dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/green"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Intermedio (61 - 300)"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="3.5dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/blue"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profundos (> 300)"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="3.5dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/yellow"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Último Sismo"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/borde_glosario"
            android:padding="10dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="7dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/icono01"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Día, mes, año y hora de ocurrencia del sismo."
                    android:textColor="@color/black"
                    android:textSize="16.5sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/borde_glosario"
            android:padding="10dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magnitud"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="7dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:background="@drawable/icono02"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Para un sismo con magnitudes ≤ 6.5 se considera la escala de Magnitud Local (ML) o Richter. Para sismos mayores, la escala magnitud momento (Mw)."
                    android:textColor="@color/black"
                    android:textSize="16.5sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/borde_glosario"
            android:padding="10dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/referencia"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="7dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/icono03"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ubicación del epicentro del sismo con relación a la Plaza de Armas de la ciudad/localidad más cercana."
                    android:textColor="@color/black"
                    android:textSize="16.5sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/borde_glosario"
            android:padding="10dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubicacion"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="7dp">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:background="@drawable/icono04"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Coordernadas geográficas del epicentro."
                    android:textColor="@color/black"
                    android:textSize="16.5sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/borde_glosario"
            android:padding="10dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profundidad"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="7dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/icono05"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Profundidad del foco sísmico por debajo de la superficie."
                    android:textColor="@color/black"
                    android:textSize="16.5sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/borde_glosario"
            android:padding="10dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intensidad"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginVertical="7dp">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/icono06"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Intensidad de sacudimiento del suelo de acuerdo a la escala de Mercalli Modificada"
                    android:textColor="@color/black"
                    android:textSize="16.5sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>